@@ -1,5 +1,14 @@
 2006-05-09  Ross Burton  <ross@burtonini.com>
 
+	* src/sj-error.[ch]:
+	* src/sj-metadata-cdtext.h:
+	Remove
+
+	* tests/Makefile.am:
+	Update.
+
+2006-05-09  Ross Burton  <ross@burtonini.com>
+
 	* [most files]:
 	Split into libjuicer, the backend code, and src, the UI.
 
